fix project image size on mobile size

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -49,8 +49,9 @@ p {
 }
 .project-image {
   width: 100%;
-  height: 350px;
+  height: 220px;
   border: 2px solid white;
+  max-height: 550px;
 }
 .logo-image{
   height: 100px;
@@ -89,6 +90,11 @@ p {
   transform: scale(1.0);
   transition: all(.25s);
   box-shadow: none;
+}
+@media (max-width: 991px){
+  .project-image { 
+    height: 350px;
+  }
 }
 @media (min-width: 768px) {
   p {
